--- a/css/styles.css
+++ b/css/styles.css
@@ -3,48 +3,33 @@ body {
 }
 
 .container {
-	width: 90%;
+	width: 80%;
 	margin: 0 auto;
 	max-width: 850px;
+	margin-top: 3rem;
 }
 
 .header {
   position: relative;
 }
 
-h2 {
-  position: absolute;
-	top: 0;
-	left: 0;
+h1 {
+/*	position: absolute;
+	top: 50px;
+	left: 0;*/
+	font-size: 3rem;
 	font-family: "ff mark pro", sans-serif;
 	font-weight: 700;
-	font-size: 1.4rem;
 	text-rendering: optimizeLegibility;
-	text-transform: uppercase;
-	margin-top: 3rem;
-}
-
-@media (min-width: 468px) {
-	h2 {
-		margin-top: 3rem;
-	}
-}
-
-h1 {
-	position: absolute;
-	top: 50px;
-	left: 0;
-	font-family: "brandon grotesque", sans-serif;
-	font-weight: 700;
-	text-rendering: optimizeLegibility;
-	background-color: white;
-	text-transform: uppercase;
-	margin-top: 3rem;
+	margin-bottom: 1px;
+/*	background-color: white;*/
+/*	text-transform: uppercase;*/
+/*	margin-top: 3rem;*/
 }
 
 
 
-@media (min-width: 468px) {
+/*@media (min-width: 468px) {
 	h1 {
 		margin-top: 3rem;
 	}
@@ -54,13 +39,34 @@ h1 {
 	h1 {
 		margin-top: 6.6rem;
 	}
+}*/
+
+h2 {
+/*  position: absolute;
+	top: 0;
+	left: 0;*/
+	font-family: "ff mark pro", sans-serif;
+	font-weight: 700;
+	font-size: 2rem;
+	text-rendering: optimizeLegibility;
+	margin-top: 0;
+/*	text-transform: uppercase;*/
+/*	margin-top: 3rem;*/
 }
 
-.box {
+/*@media (min-width: 468px) {
+	h2 {
+		margin-top: 3rem;
+	}
+}*/
+
+
+
+/*.box {
   display: none;
-}
+}*/
 
-@media (min-width: 650px) {
+/*@media (min-width: 650px) {
 	.box {
 		display: block;
   	height: 260px;
@@ -71,13 +77,14 @@ h1 {
   	top: 50px;
   	z-index: -1;
 	}
-}
+}*/
 
 p {
-	position: relative;
-	top: 13rem;
+/*	position: relative;*/
+/*	top: 13rem;*/
 	font-family: "ff mark pro", sans-serif;
 	text-rendering: optimizeLegibility;
+	line-height: 1.5;
 }
 
 @media (min-width: 468px) {
@@ -94,34 +101,34 @@ p {
 
 @media (min-width: 650px) {
 	.p1 {
-		float:right;
-		margin-left: 1.2rem;
+/*		float:right;*/
+/*		margin-left: 1.2rem;*/
 		width: 64.5%;
 	}
 }
 
 @media (min-width: 650px) {
 	.p2 {
-		float:right;
-		margin-left: 1.2rem;
-		margin-bottom: 2.4rem;
+/*		float:right;*/
+/*		margin-left: 1.2rem;
+		margin-bottom: 2.4rem;*/
 		width: 64.5%;
 	}
 }
 
 
 .connect-icons {
-	position: relative;
+/*	position: relative;
 	float: left;
-	top: 13rem;
+	top: 13rem;*/
 	list-style: none;
-  	margin-right: 16px;
+/*  	margin-right: 16px;*/
   	padding: 0;
  }
 
  .connect-icons li {
- 	float: right;
- 	margin-right: 1.2rem;
+/* 	float: right;*/
+/* 	margin-right: 1.2rem;*/
  }
 
  @media (min-width: 468px) {
@@ -133,8 +140,8 @@ p {
 @media (min-width: 650px) {
 	.connect-icons {
 		width: 63%;
-		float: right;
-		top: 19rem;
+/*		float: right;
+		top: 19rem;*/
 	}
 }
 
@@ -154,14 +161,15 @@ a {
  	background-repeat: no-repeat;
 }
 
- .twitter {
+/* .twitter {
  	background-image: url("../img/twitter.svg");
- }
+ }*/
 
  .linkedin {
  	background-image: url("../img/linkedin.svg");
  }
 
-.dribbble {
+/*.dribbble {
 	background-image: url("../img/dribbble.svg");
 }
+*/
