--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h1 {
 	font-size: 3rem;
 	font-weight: 700;
 	text-rendering: optimizeLegibility;
-	margin-bottom: 1px;
+	margin-bottom: .1rem;
 	color: #10124E;
 }
 
